fixed particle header overflow

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ html {
 .particleHeader {
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
 }
 
 .headerBack {
